# TytoCogsV3

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  info.json  pyproject.toml  pytest.ini
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: LETTA.instructions.md  commit.instructions.md
.github/workflows/: blackflake8.yml  bumpversion.yml  codeql-analysis.yml  codeql.yml  discord-push.yml  pylint.yml  python-app.yml
aurora/: COMMANDS.md  EVENT_SYSTEM_DESIGN.md  IMPLEMENTATION_SUMMARY.md  NEW_CONFIG_COMMANDS.md  PERMISSIONS_UPDATE.md  README.md  __init__.py  aurora.py  bootstrap.py  config.example.yml  config.py  config.yml  info.json  initialize.py  test_aurora.py  test_config.py  test_context.py  test_errors.py  test_prompts.py  test_queue.py  test_timedelta_formatting.py  utils.py
aurora/agents/: aurora.af
aurora/tools/: .gitrepo  README.md  blocks.py  ignore.py  requirements.txt  upsert_tools.py
aurora/tools/tools/: __init__.py  blocks.py  discord.py
aurora/utils/: blocks.py  context.py  dataclasses.py  errors.py  prompts.py  queue.py
docs/plans/: 2026-02-24-aurora-system-prompt-redesign.md
gpt3chatbot/: __init__.py  _utils.py  gpt3chatbot.py  info.json  personalities.json  personalities.py  personality.schema.json  utils.py
gpt3chatbot/data/: personalities.json
historylesson/: __init__.py  conftest.py  historylesson.py  info.json  test_historylesson.py
ispy-fj/: ispy-fj.py
ispyfj/: __init__.py  info.json  ispyfj.py  test_ispyfj.py
letta/: info.json
mcinfo/: __init__.py  helpers.py  info.json  mcinfo.py  test_helpers.py
redvids/: __init__.py  info.json  redvids.py  test_async_fix.py  test_redvids.py
spottube/: __init__.py  info.json  spottube.py  test_spottube.py
tldscience/: __init__.py  info.json  tldscience.py
tldw/: CHANGELOG.md  __init__.py  info.json  test_tldw.py  tldw.py
x2image/: __init__.py  info.json  test_x2image.py  x2image.py
