[tool.poetry]
name = "tytocogsv3"
version = "0.2.1"
description = "Cogs for Red-DiscordBot"
authors = ["SootyOwl <tyto@tyto.cc>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
Red-DiscordBot = "^3.5.20"
openai = "^1.78.1"
beautifulsoup4 = "^4.12.3"
html2image = "^2.0.6"
wand = "^0.6.13"
redvid = "^2.0.5"
anthropic = "^0.51.0"
mcstatus = "^11.1.1"
yt-transcript-fetcher = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8 = "^7.3.0"
black = { extras = ["d"], version = "^24.3.0" }
pytest-asyncio = "^1.1.0"
pytest-mock = "^3.14.1"
dotenv = "^0.9.9"

[tool.black]
line-length = 120
target-version = ['py38', 'py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
