[project]
name = "tytocogsv3"
version = "0.8.0"
description = "Cogs for Red-DiscordBot"
authors = [{ name = "SootyOwl", email = "tyto@tyto.cc" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
dependencies = [
  "Red-DiscordBot>=3.5.20,<4",
  "openai>=2.8.1,<3",
  "beautifulsoup4>=4.12.3,<5",
  "html2image>=2.0.6,<3",
  "wand>=0.6.13,<0.7",
  "redvid>=2.0.5,<3",
  "anthropic>=0.51.0,<0.52",
  "mcstatus>=11.1.1,<12",
  "yt-transcript-fetcher>=1.2.1,<2",
  "pip>=25.1.1",
  "python-youtube>=0.9.8",
  "spotify>=0.10.2",
]

[dependency-groups]
dev = [
  "pytest>=8.4.1,<9",
  "flake8>=7.3.0,<8",
  "black[d]>=24.3.0,<25",
  "pytest-asyncio>=1.0.0,<2",
  "pytest-mock>=3.14.1,<4",
  "dotenv>=0.9.9,<0.10",
  "pytest-dotenv>=0.5.2",
  "pre-commit>=4.2.0",
  "ipykernel>=7.1.0",
  "pytest-cov>=7.0.0",
]

[tool.uv]
package = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = false
[build-system]
requires = ["hatchling", "pip"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ['py38', 'py39']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
